--- a/app/views/home/timelines.html.erb
+++ b/app/views/home/timelines.html.erb
@@ -232,10 +232,6 @@
 </div>
 
 <!-- back to top button -->
-<div id="back-button" class="fixed bottom-10 right-10 cursor-pointer">
-<div class="w-[56px] h-[56px] border border-[#0f41af] rounded-full relative">
-  <%= image_tag 'up-arrow.png', class: 'absolute top-[50%] left-0 right-0 mx-auto -translate-y-[50%]' %>
-</div>
-</div>
+<%= render 'partial/back_to_button' %>
 </body>
 </html>
